--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "autoprefixer": "^10.4.21",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jspdf": "^3.0.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.1",
@@ -23,7 +24,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "twilio": "^5.7.0"
+    "twilio": "^5.7.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
